// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser Modifiers Tests > Parse Definition with Modifier 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 19,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": {
        "FullStart": 1,
        "Kind": 104,
        "Leading": [],
        "Length": 1,
        "Start": 1,
        "Text": "#",
        "Trailing": [],
        "Value": undefined,
      },
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
            "Value": "MyReport",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 19,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[#Report: MyReport]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 104,
      "Leading": [],
      "Length": 1,
      "Start": 1,
      "Text": "#",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
      "Value": "MyReport",
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 19,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 19,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Modifiers Tests > Parse Definition with Optional Modifier 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 16,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 16,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 17,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": {
        "FullStart": 1,
        "Kind": 102,
        "Leading": [],
        "Length": 1,
        "Start": 1,
        "Text": "!",
        "Trailing": [],
        "Value": undefined,
      },
      "name": {
        "end": 16,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "MyField",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 9,
            "Text": "MyField",
            "Trailing": [],
            "Value": "MyField",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Field",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 2,
            "Text": "Field",
            "Trailing": [],
            "Value": "Field",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 17,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[!Field: MyField]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 102,
      "Leading": [],
      "Length": 1,
      "Start": 1,
      "Text": "!",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 2,
      "Text": "Field",
      "Trailing": [],
      "Value": "Field",
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 9,
      "Text": "MyField",
      "Trailing": [],
      "Value": "MyField",
    },
    {
      "FullStart": 16,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 16,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 17,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 17,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Modifiers Tests > Parse Local Modifier with Set as and Variables 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 20,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 20,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 21,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 21,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 54,
          "isAttributeModifier": true,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": "local",
          "name": {
            "end": 20,
            "isIncomplete": false,
            "kind": 3,
            "start": 15,
            "text": "Local",
            "tokens": [
              {
                "FullStart": 15,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 15,
                "Text": "Local",
                "Trailing": [],
                "Value": "Local",
              },
            ],
          },
          "start": 15,
          "value": [
            {
              "end": 27,
              "isIncomplete": false,
              "kind": 3,
              "start": 22,
              "text": "Field",
              "tokens": [
                {
                  "FullStart": 22,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 22,
                  "Text": "Field",
                  "Trailing": [],
                  "Value": "Field",
                },
              ],
            },
            {
              "end": 36,
              "isIncomplete": false,
              "kind": 3,
              "start": 29,
              "text": "Default",
              "tokens": [
                {
                  "FullStart": 29,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 7,
                  "Start": 29,
                  "Text": "Default",
                  "Trailing": [],
                  "Value": "Default",
                },
              ],
            },
            {
              "end": 44,
              "isIncomplete": false,
              "kind": 3,
              "start": 38,
              "text": "Set as",
              "tokens": [
                {
                  "FullStart": 38,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 38,
                  "Text": "Set",
                  "Trailing": [
                    {
                      "FullStart": 41,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 41,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "Set",
                },
                {
                  "FullStart": 42,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 2,
                  "Start": 42,
                  "Text": "as",
                  "Trailing": [],
                  "Value": "as",
                },
              ],
            },
            {
              "end": 54,
              "fieldName": {
                "end": 54,
                "isIncomplete": false,
                "kind": 3,
                "start": 47,
                "text": "MyField",
                "tokens": [
                  {
                    "FullStart": 47,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 7,
                    "Start": 47,
                    "Text": "MyField",
                    "Trailing": [
                      {
                        "FullStart": 54,
                        "Kind": 6,
                        "Leading": [],
                        "Length": 1,
                        "Start": 54,
                        "Text": "
",
                        "Trailing": [],
                        "Value": undefined,
                      },
                    ],
                    "Value": "MyField",
                  },
                ],
              },
              "kind": 8,
              "start": 46,
            },
          ],
        },
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 60,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 60,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 61,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 61,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 93,
          "isAttributeModifier": true,
          "isIncomplete": false,
          "kind": 2,
          "modifierType": "local",
          "name": {
            "end": 60,
            "isIncomplete": false,
            "kind": 3,
            "start": 55,
            "text": "Local",
            "tokens": [
              {
                "FullStart": 55,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 55,
                "Text": "Local",
                "Trailing": [],
                "Value": "Local",
              },
            ],
          },
          "start": 55,
          "value": [
            {
              "end": 67,
              "isIncomplete": false,
              "kind": 3,
              "start": 62,
              "text": "Field",
              "tokens": [
                {
                  "FullStart": 62,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 62,
                  "Text": "Field",
                  "Trailing": [],
                  "Value": "Field",
                },
              ],
            },
            {
              "end": 76,
              "isIncomplete": false,
              "kind": 3,
              "start": 69,
              "text": "Default",
              "tokens": [
                {
                  "FullStart": 69,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 7,
                  "Start": 69,
                  "Text": "Default",
                  "Trailing": [],
                  "Value": "Default",
                },
              ],
            },
            {
              "end": 84,
              "isIncomplete": false,
              "kind": 3,
              "start": 78,
              "text": "Set as",
              "tokens": [
                {
                  "FullStart": 78,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 78,
                  "Text": "Set",
                  "Trailing": [
                    {
                      "FullStart": 81,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 81,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "Set",
                },
                {
                  "FullStart": 82,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 2,
                  "Start": 82,
                  "Text": "as",
                  "Trailing": [],
                  "Value": "as",
                },
              ],
            },
            {
              "end": 93,
              "kind": 9,
              "start": 86,
              "variableName": {
                "end": 93,
                "isIncomplete": false,
                "kind": 3,
                "start": 88,
                "text": "MyVar",
                "tokens": [
                  {
                    "FullStart": 88,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 5,
                    "Start": 88,
                    "Text": "MyVar",
                    "Trailing": [],
                    "Value": "MyVar",
                  },
                ],
              },
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 13,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 13,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 14,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 14,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 93,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 13,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "Test",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 9,
            "Text": "Test",
            "Trailing": [],
            "Value": "Test",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 1,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 1,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 1,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 93,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    15,
    55,
  ],
  "start": 0,
  "text": "[Report: Test]
Local: Field: Default: Set as: #MyField
Local: Field: Default: Set as: ##MyVar",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 1,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 9,
      "Text": "Test",
      "Trailing": [],
      "Value": "Test",
    },
    {
      "FullStart": 13,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 13,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 14,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 14,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 15,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 15,
      "Text": "Local",
      "Trailing": [],
      "Value": "Local",
    },
    {
      "FullStart": 20,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 20,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 21,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 21,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 22,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 22,
      "Text": "Field",
      "Trailing": [],
      "Value": "Field",
    },
    {
      "FullStart": 27,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 27,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 28,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 28,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 29,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 29,
      "Text": "Default",
      "Trailing": [],
      "Value": "Default",
    },
    {
      "FullStart": 36,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 36,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 37,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 37,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 38,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 38,
      "Text": "Set",
      "Trailing": [
        {
          "FullStart": 41,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 41,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Set",
    },
    {
      "FullStart": 42,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 42,
      "Text": "as",
      "Trailing": [],
      "Value": "as",
    },
    {
      "FullStart": 44,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 44,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 45,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 45,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 46,
      "Kind": 104,
      "Leading": [],
      "Length": 1,
      "Start": 46,
      "Text": "#",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 47,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 47,
      "Text": "MyField",
      "Trailing": [
        {
          "FullStart": 54,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 54,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "MyField",
    },
    {
      "FullStart": 55,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 55,
      "Text": "Local",
      "Trailing": [],
      "Value": "Local",
    },
    {
      "FullStart": 60,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 60,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 61,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 61,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 62,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 62,
      "Text": "Field",
      "Trailing": [],
      "Value": "Field",
    },
    {
      "FullStart": 67,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 67,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 68,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 68,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 69,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 69,
      "Text": "Default",
      "Trailing": [],
      "Value": "Default",
    },
    {
      "FullStart": 76,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 76,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 77,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 77,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 78,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 78,
      "Text": "Set",
      "Trailing": [
        {
          "FullStart": 81,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 81,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Set",
    },
    {
      "FullStart": 82,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 82,
      "Text": "as",
      "Trailing": [],
      "Value": "as",
    },
    {
      "FullStart": 84,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 84,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 85,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 85,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 86,
      "Kind": 202,
      "Leading": [],
      "Length": 2,
      "Start": 86,
      "Text": "##",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 88,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 88,
      "Text": "MyVar",
      "Trailing": [],
      "Value": "MyVar",
    },
    {
      "FullStart": 93,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 93,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;
